<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- ActionBar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/app_bar_elevation"
        android:background="@color/primary"/>

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/query_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="@dimen/app_bar_elevation"
        android:layout_below="@+id/main_toolbar">

        <!-- Followed https://github.com/rengwuxian/MaterialEditText/blob/master/sample/src/main/res/layout/activity_main.xml -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            tools:ignore="RtlHardcoded"
            android:id="@+id/linearLayout">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname_hint"
                android:textSize="34sp"
                android:inputType="textCapWords"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_helperText="@string/surname_helper"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textSize="34sp"
                android:inputType="textCapWords"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_helperText="@string/name_helper"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:paddingBottom="@dimen/big_padding" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
        android:id="@+id/query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fab_icon="@drawable/ic_action_done"
        app:fab_colorNormal="@color/accent"
        app:fab_colorPressed="@color/primary_light"
        android:elevation="@dimen/fab_elevation"
        android:layout_below="@+id/query_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/half_fab_dimens" />

    <include
        android:id="@+id/include_sugar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/query_toolbar"
        layout="@layout/content_main" />

</RelativeLayout>
