<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_action_room"
            android:layout_gravity="center_vertical|bottom"
            android:paddingRight="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthplace_hint"
                android:id="@+id/textView3"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/primary_dark" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthplaceTextView"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/birthplace_hint"
                android:textColor="@color/secondary_text"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:background="@null"
                android:singleLine="true"
                android:lines="1" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_action_today"
            android:layout_gravity="center_vertical|bottom"
            android:paddingRight="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_padding"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_hint"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/primary_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="18/06/1993"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:background="@null"
                android:id="@+id/birthday_text_view"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/secondary_text"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_action_timer_auto"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_padding"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/primary_dark" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="-4dp">

                <RadioButton
                    android:id="@+id/female_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female"
                    android:checked="true"
                    android:textColor="@color/secondary_text" />

                <RadioButton
                    android:id="@+id/male_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male"
                    android:checked="false"
                    android:textColor="@color/secondary_text" />

            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_text_view"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textStyle="bold"
        tools:text="PSTCLD93H18H501"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:maxLines="1"
        android:lines="1"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/small_padding" />
</RelativeLayout>